# tiny-ragemp-launcher

./: .gitignore  CMakeLists.txt  README.md  build.bat  patch_updater.py
src/: main.cpp
tools/: build.py  config.json  images_manifest.json
